--- a/DAL/App.config
+++ b/DAL/App.config
@@ -10,4 +10,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="TileDataContext" connectionString="data source=Ralleback;initial catalog=TileData;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="BoardDataContext" connectionString="data source=Ralleback;initial catalog=GameOfLife;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
