Removing WorldGrid and adding BoardGrid

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -44,5 +44,11 @@
     <Compile Include="BoardGrid.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DAL\DAL.csproj">
+      <Project>{7cf13718-d482-44e9-8c4e-6fd5be654724}</Project>
+      <Name>DAL</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
