Prototype: Trying to use SQLite CodeFirst to create the database by using SqLiteCreateDatabaseIfNotExists. TestDB.sqlite is created but no tables are being created.

--- a/DAL/App.config
+++ b/DAL/App.config
@@ -14,7 +14,7 @@
   <connectionStrings>
     <!--<add name="BoardDataContext" connectionString="data source=Ralleback;initial catalog=GameOfLife;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
     <add name="BoardDataContext" connectionString="Data Source=.\TestDB.sqlite" providerName="System.Data.SQLite.EF6" />
-  </connectionStrings>
+  <add name="Model1" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=DAL.Model1;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
   <system.data>
     <DbProviderFactories>
       <remove invariant="System.Data.SQLite" />
