--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -54,7 +54,7 @@
     <Compile Include="GameBoardData.cs" />
     <Compile Include="DatabaseRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SavedGames.cs" />
+    <Compile Include="SaveGameData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
