--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -43,7 +43,7 @@
   <ItemGroup>
     <Compile Include="GameBoard.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services.cs" />
+    <Compile Include="Service.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj">
