--- a/EFGameOfLife/App.config
+++ b/EFGameOfLife/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <connectionStrings>
-    <add name="BoardDataContext" connectionString="data source=Ralleback;initial catalog=GameOfLife;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="BoardDataContext" connectionString="data source=Ralleback;initial catalog=GameOfLife;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework;Connection Timeout=10" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
