--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -50,11 +50,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BoardDataContext.cs" />
-    <Compile Include="GameBoardData.cs" />
+    <Compile Include="GOLContext.cs" />
+    <Compile Include="BoardEntity.cs" />
     <Compile Include="DatabaseRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SaveGameData.cs" />
+    <Compile Include="GameEntity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
