--- a/EFGameOfLife/App.config
+++ b/EFGameOfLife/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <connectionStrings>
-    <!--<add name="BoardDataContext" connectionString="data source=192.168.1.216\SQLEXPRESS;initial catalog=GameOfLife;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework;Connection Timeout=10" providerName="System.Data.SqlClient" />-->
+    <!--<add name="BoardDataContext" connectionString="data source=.\SQLEXPRESS;initial catalog=GameOfLife;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework;Connection Timeout=10" providerName="System.Data.SqlClient" />-->
     <add name="BoardDataContext" connectionString="data source=LAPTOP-HOV3EUR\SQLEXPRESS;User ID=xyntica;Password=bananbanan;initial catalog=GameOfLife;MultipleActiveResultSets=True;App=EntityFramework;Connection Timeout=10" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
