--- a/EFGameOfLife/App.config
+++ b/EFGameOfLife/App.config
@@ -10,7 +10,7 @@
   <connectionStrings>
     <!--<add name="BoardDataContext" connectionString="data source=Ralleback;initial catalog=GameOfLife;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework;Connection Timeout=10" providerName="System.Data.SqlClient" />-->
     <!--<add name="BoardDataContext" connectionString="data source=.\SQLEXPRESS;initial catalog=GameOfLife;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework;Connection Timeout=10" providerName="System.Data.SqlClient" />-->
-    <add name="BoardDataContext" connectionString="data source=LAPTOP-HOV3EUR\SQLEXPRESS;User ID=xyntica;Password=bananbanan;initial catalog=GameOfLife;MultipleActiveResultSets=True;App=EntityFramework;Connection Timeout=10" providerName="System.Data.SqlClient" />
+    <!--<add name="BoardDataContext" connectionString="data source=LAPTOP-HOV3EUR\SQLEXPRESS;User ID=xyntica;Password=bananbanan;initial catalog=GameOfLife;MultipleActiveResultSets=True;App=EntityFramework;Connection Timeout=10" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
